--- a/style.css
+++ b/style.css
@@ -7,8 +7,26 @@ body {
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+}
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
+    font-size: .8rem;
+}
 
+.page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+.content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
 }
 
 a{
@@ -16,7 +34,7 @@ a{
     color: #F9FAF8;
 }
 
-.header-hero{
+.header-hero, .footer{
     background-color: #1F2937;
 }
 
@@ -43,14 +61,16 @@ a{
     gap: 1rem;
 }
 
-.img{
-    overflow: hidden;
+.img img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 
 .content {
     width: 50%;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .hero {
@@ -82,6 +102,43 @@ ul {
     display: flex;
 }
 
+.information{
+    padding-top: 2rem;
+    margin-bottom: 4rem;
+}
+
+.info-text{
+    text-align: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.features{
+    padding-top: 2rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.feature-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box{
+    height: 8rem;
+    width: 8rem;
+    outline-color: #3882F6;
+    outline-style: solid;
+    border-radius: 8px;
+}
+
+.box-text{
+    margin-top: 1rem;
+    text-align: center;
+    color: #5e5e5e;
+}
 
 .button{
     background-color: #3882F6;
