--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 
 body {
-    height: 100vh;
-    margin: 0;
-    overflow: hidden;
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
 }
-.footer{
-    position: absolute;
-    bottom: 0;
+
+main{
+    flex-grow: 1;
+}
+
+footer{
     width: 100%;
     height: 2.5rem;
+    padding: 0.8rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,21 +23,12 @@ body {
     font-size: .8rem;
 }
 
-.page-container {
-    position: relative;
-    min-height: 100vh;
-}
-
-.content-wrap {
-    padding-bottom: 2.5rem;    /* Footer height */
-}
-
 a{
     text-decoration: none;
     color: #F9FAF8;
 }
 
-.header-hero, .footer{
+header, .hero, footer{
     background-color: #1F2937;
 }
 
@@ -69,30 +63,30 @@ a{
 
 
 .content {
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
 }
 
 .hero {
     padding: 8rem 0;
-    .main-text{
-        font-size: 48px;
-        font-weight: bold;
-        color: #F9FAF8;
-    }
+}
+.main-text{
+    font-size: 48px;
+    font-weight: bold;
+    color: #F9FAF8;
+}
+
+.hero-content{
     display: flex;
+    align-content: center;
     gap: 4rem;
 }
 
 .left, .right {
     width: 50%;
-}
-
-.right {
-    background-color: #6D747C;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 
 ul {
@@ -104,7 +98,8 @@ ul {
 
 .information{
     padding-top: 2rem;
-    margin-bottom: 4rem;
+    padding-bottom: 8rem;
+    width: 50%;
 }
 
 .info-text{
@@ -147,6 +142,58 @@ ul {
     text-align: center;
     border-radius: 8px;
     display: inline-block;
-    padding: 8px 24px;
+    padding: 0.5rem 2rem;
     margin-top: 16px;
+    flex: 0 0 auto;
+    align-self: flex-start;
+}
+
+.quote{
+    background-color: #E5E7EB;
+    padding: 4rem 0;
+    .content{
+        width: 50%;
+    }
+}
+
+.quote-content{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1F2937;
+    text-align: left;
+    margin: 0;
+}
+
+.quote-attribution {
+    margin: 0;
+    font-size: 18px;
+    text-align: right;
+    font-weight: bold;
+    color: #1F2937;
+}
+
+.call-to-action-box{
+    background-color: #3882F6;
+    padding: 2rem 0;
+    margin: 4rem auto;
+    border-radius: 8px;
+    .main-text{
+        font-size: 20px;
+    }
+    .secondary{
+        font-size: 16px;
+    }
+}
+
+.call-to-action-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 7rem;
+}
+
+.call-to-action-btn{
+    outline: 2px solid #F9FAF8;
+    margin-top: 0;
 }
